tests/baselines/reference/validVoidValues.errors.txt
validVoidValues.ts(3,1): error TS2322: Type 'null' is not assignable to type 'void'.


==== validVoidValues.ts (1 errors) ====
    var x: void;
    x = undefined;
    x = null;
    ~
!!! error TS2322: Type 'null' is not assignable to type 'void'.